# JTKJ-PicoRTOS-Project

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeLists.txt.back  blink_RTOS.c  hat_example.c  main.c  shell_example.c  test_microphone.c
examples/: test_microphone.c
examples/compilation_errors/: CMakeLists.txt
examples/compilation_errors/src/: main.c  main_correct.c
examples/hello_blink_freertos/: CMakeLists.txt
examples/hello_blink_freertos/src/: main.c
examples/hello_dual_cdc/: CMakeLists.txt
examples/hello_dual_cdc/src/: main.c  main_withoutFreeRTOS.c
examples/hello_freertos/: CMakeLists.txt
examples/hello_freertos/src/: hello_freertos2.c  hello_freertos3.c  main.c
examples/hello_hat/: CMakeLists.txt
examples/hello_hat/src/: main.c
examples/hello_microphone/src/: main.c
examples/hello_pico/: CMakeLists.txt
examples/hello_pico/src/: main.c
examples/test_cdc/: CMakeLists.txt
examples/test_cdc/src/: main.c
examples/test_dual_cdc/: CMakeLists.txt
examples/test_dual_cdc/src/: main.c
examples/test_microphone/: CMakeLists.txt
libs/TKJHAT/: CMakeLists.txt
libs/TKJHAT/docs/: Doxyfile  overview.md
libs/TKJHAT/include/tkjhat/: pins.h  sdk.h
libs/TKJHAT/src/: sdk.c  ssd1306.c
libs/TKJHAT/src/pdm/: pdm_microphone.c
libs/shellSDK/: CMakeLists.txt
libs/shellSDK/include/shellSDK/: SDK.h  imu_icm42670.h  pdm_microphone.h  ssd1306.h
libs/shellSDK/src/: SDK.c  i2c.c  imu_icm42670.c  ssd1306.c
libs/shellSDK/src/pdm/: pdm_microphone.c  pdm_microphone.pio
libs/usb-cdc/: CMakeLists.txt
libs/usb-cdc/config/: tusb_config.h
libs/usb-cdc/src/: usb_descriptors.c
libs/usb-serial-debug/: CMakeLists.txt
libs/usb-serial-debug/config/: tusb_config.h
libs/usb-serial-debug/include/usbSerialDebug/: helper.h
libs/usb-serial-debug/src/: helper.c  usb_descriptors.c
src/: main.c  template.c
